@@ -4,6 +4,11 @@ History of this buildout
 6.0.0 (unreleased)
 ------------------
 
+
+- Uninstall Classic Theme. [jladage]
+
+- Removed folder "Persberichten". [jladage]
+
 - Reindex Date indexes to prevent POSKeyErrors.  [jladage]
 
 - Configure Documenten faceted navigation.  [jladage]
